--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
   <section id="about" class="about">
     <div class="about-content">
       <div class="about-image">
-        <img src="img/me.jpg" alt="Your Image">
+        <img src="img/me.png" alt="Your Image">
       </div>
       <div class="about-text">
         <h2>About Me</h2>
