--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Menu Bar -->
   <nav class="menu-bar">
-    <div class="site-name">Dineth Gunawardana</div>
+    <div class="site-name">Dineth.G</div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">About Dineth</a></li>
