--- a/gallery.html
+++ b/gallery.html
@@ -42,8 +42,8 @@
   <script>
     // Function to fetch Instagram media
     async function fetchInstagramMedia() {
-      const token = 'YOUR_USER_ACCESS_TOKEN'; // Replace with your User Access Token
-      const userId = 'YOUR_INSTAGRAM_USER_ID'; // Replace with your Instagram User ID
+      const token = 'IGQWROZA1d1YUJrUVJabHlURmlYWDJVXzh2TVNMblhGYTExNXNxVTJaTjVTalJVZAkZAGYWgxZAUdaNDc1a3gxZAmJVazh2dTNFd1dudVctLUJOaGJCa3FtcDNDNFAzdlVxa1VBTFVEWnprUl9lOER0dWo0MUplOHBicWcZD'; // Replace with your User Access Token
+      const userId = '66771702202'; // Replace with your Instagram User ID
 
       try {
         // Fetch recent media from Instagram
