--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,6 @@
 <body>
   <!-- Menu Bar -->
   <nav class="menu-bar">
-    
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">About Dineth</a></li>
@@ -50,17 +49,25 @@
         const response = await fetch(`https://graph.instagram.com/v12.0/${userId}/media?fields=id,media_type,media_url,caption&access_token=${token}`);
         const data = await response.json();
 
-        // Render the fetched media
-        const feedContent = document.getElementById('instagram-feed-content');
-        data.data.forEach(item => {
-          const imageUrl = item.media_url;
-          const caption = item.caption || '';
-          const html = `<div class="instagram-item">
-                          <img src="${imageUrl}" alt="${caption}">
-                          <p>${caption}</p>
-                        </div>`;
-          feedContent.innerHTML += html;
-        });
+        // Log the response data for debugging
+        console.log('API Response:', data);
+
+        // Check if data is received
+        if (data && data.data) {
+          // Render the fetched media
+          const feedContent = document.getElementById('instagram-feed-content');
+          data.data.forEach(item => {
+            const imageUrl = item.media_url;
+            const caption = item.caption || '';
+            const html = `<div class="instagram-item">
+                            <img src="${imageUrl}" alt="${caption}">
+                            <p>${caption}</p>
+                          </div>`;
+            feedContent.innerHTML += html;
+          });
+        } else {
+          console.error('No data received from Instagram API');
+        }
 
       } catch (error) {
         console.error('Error fetching Instagram media:', error);
