--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <h1>Dineth Gunawardana</h1>
       <div class="buttons">
         <a href="portfolio.html" class="button view-portfolio-button">About Me</a>
-        <a href="gallery.html" class="button">Gallery</a>
+        <a href="build/gallery.html" class="button">Gallery</a>
       </div>
     </header>
 
