--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
-    <link rel="stylesheet" href="styles2.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+
+        /* Menu Bar */
+        .menu-bar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .menu-bar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+
+        .menu-bar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* Header */
+        .header {
+            position: relative;
+            text-align: center;
+            color: white;
+        }
+
+        .header img {
+            width: 100%;
+            height: auto;
+        }
+
+        .header-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3em;
+            font-weight: bold;
+        }
+
+        /* Gallery */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+            animation: fadeIn 1s;
+        }
+
+        .gallery-item {
+            width: 30%;
+            margin: 1%;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.1);
+        }
+
+        /* Fullscreen View */
+        .fullscreen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            animation: fadeIn 0.5s;
+        }
+
+        .fullscreen img {
+            max-width: 80%;
+            max-height: 80%;
+        }
+
+        .close {
+            position: absolute;
+            top: 20px;
+            right: 40px;
+            color: white;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        a#download-link {
+            margin-top: 20px;
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+        }
+
+        button {
+            position: absolute;
+            top: 50%;
+            color: white;
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 16px;
+        }
+
+        button#prev {
+            left: 10px;
+        }
+
+        button#next {
+            right: 10px;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
+    <div class="menu-bar">
+        <a href="#home">Home</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
+    </div>
+
+    <div class="header">
+        <img src="imgpg.png" alt="Header Image">
+        <div class="header-text">Gallery</div>
+    </div>
+
     <div class="gallery">
         <img src="photo1.jpg" alt="Photo 1" class="gallery-item" onclick="openFullscreen(this)">
         <img src="photo2.jpg" alt="Photo 2" class="gallery-item" onclick="openFullscreen(this)">
@@ -21,6 +167,52 @@
         <button id="next" onclick="nextSlide()">&#10095;</button>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        let currentIndex = 0;
+        const galleryItems = document.querySelectorAll('.gallery-item');
+
+        function openFullscreen(element) {
+            const fullscreen = document.getElementById('fullscreen-view');
+            const fullscreenImage = document.getElementById('fullscreen-image');
+            const downloadLink = document.getElementById('download-link');
+
+            fullscreen.style.display = 'flex';
+            fullscreenImage.src = element.src;
+            downloadLink.href = element.src;
+            currentIndex = Array.from(galleryItems).indexOf(element);
+        }
+
+        function closeFullscreen() {
+            document.getElementById('fullscreen-view').style.display = 'none';
+        }
+
+        function nextSlide() {
+            currentIndex = (currentIndex + 1) % galleryItems.length;
+            updateFullscreenImage();
+        }
+
+        function prevSlide() {
+            currentIndex = (currentIndex - 1 + galleryItems.length) % galleryItems.length;
+            updateFullscreenImage();
+        }
+
+        function updateFullscreenImage() {
+            const fullscreenImage = document.getElementById('fullscreen-image');
+            const downloadLink = document.getElementById('download-link');
+
+            fullscreenImage.src = galleryItems[currentIndex].src;
+            downloadLink.href = galleryItems[currentIndex].src;
+        }
+
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeFullscreen();
+            } else if (event.key === 'ArrowRight') {
+                nextSlide();
+            } else if (event.key === 'ArrowLeft') {
+                prevSlide();
+            }
+        });
+    </script>
 </body>
 </html>
