--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Dineth Gunawardana</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    
     <style>
       * {
         margin: 0;
@@ -156,7 +156,7 @@
       <h1>Dineth Gunawardana</h1>
       <div class="buttons">
         <a href="portfolio.html" class="button view-portfolio-button">About Me</a>
-        <a href="build/gallery.html" class="button">Gallery</a>
+        <a href="gallery.html" class="button">Gallery</a>
       </div>
     </header>
 
