--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="build/gallery.html">Gallery</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
       <li><a href="#social">Social Media</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
