commited to main

--- a/gallery.html
+++ b/gallery.html
@@ -220,7 +220,7 @@
         <div class="gallery-item" data-tags="wildlife nature">
             <img src="photo1.jpg" alt="Photo 1" onclick="openFullscreen(this)">
         </div>
-        <div class="gallery-item" data-tags="architecture building">
+        <div class="gallery-item" data-tags="wildlife nature">
             <img src="photo2.jpg" alt="Photo 2" onclick="openFullscreen(this)">
         </div>
         <!-- Add more photos with appropriate data-tags -->
