--- a/gallery.html
+++ b/gallery.html
@@ -217,11 +217,11 @@
     </div>
 
     <div class="gallery">
-        <div class="gallery-item" data-tags="wildlife nature">
-            <img src="photo1.jpg" alt="Photo 1" onclick="openFullscreen(this)">
+        <div class="gallery-item" data-tags="wildlife nature,amimal,portrait">
+            <img src="gimg/p1.png" alt="Photo 1" onclick="openFullscreen(this)">
         </div>
-        <div class="gallery-item" data-tags="wildlife nature">
-            <img src="photo2.jpg" alt="Photo 2" onclick="openFullscreen(this)">
+        <div class="gallery-item" data-tags="wildlife nature,animal,landscape">
+            <img src="gimg/p2.jpg" alt="Photo 2" onclick="openFullscreen(this)">
         </div>
         <!-- Add more photos with appropriate data-tags -->
     </div>
