--- a/gallery.html
+++ b/gallery.html
@@ -73,14 +73,6 @@
         .gallery-item img {
             width: 100%;
             height: auto;
-            object-fit: cover; /* Ensures the image covers the container */
-        }
-
-        .gallery-item img.thumbnail {
-            width: 100%;
-            height: 0;
-            padding-bottom: 100%; /* Ensures a square aspect ratio */
-            object-fit: cover;
         }
 
         .gallery-item.show {
@@ -225,11 +217,11 @@
     </div>
 
     <div class="gallery">
-        <div class="gallery-item" data-tags="wildlife nature,animal,portrait">
-            <img src="gimg/thumbnail_p1.png" alt="Photo 1" class="thumbnail" data-full="gimg/p1.png" onclick="openFullscreen(this)">
+        <div class="gallery-item" data-tags="wildlife nature,amimal,portrait">
+            <img src="gimg/p1.png" alt="Photo 1" onclick="openFullscreen(this)">
         </div>
         <div class="gallery-item" data-tags="wildlife nature,animal,landscape">
-            <img src="gimg/thumbnail_p2.jpg" alt="Photo 2" class="thumbnail" data-full="gimg/p2.jpg" onclick="openFullscreen(this)">
+            <img src="gimg/p2.jpg" alt="Photo 2" onclick="openFullscreen(this)">
         </div>
         <!-- Add more photos with appropriate data-tags -->
     </div>
@@ -264,8 +256,8 @@
             const downloadLink = document.getElementById('download-link');
 
             fullscreen.style.display = 'flex';
-            fullscreenImage.src = element.getAttribute('data-full');
-            downloadLink.href = element.getAttribute('data-full');
+            fullscreenImage.src = element.src;
+            downloadLink.href = element.src;
             currentIndex = Array.from(galleryItems).indexOf(element.parentElement);
         }
 
@@ -286,10 +278,9 @@
         function updateFullscreenImage() {
             const fullscreenImage = document.getElementById('fullscreen-image');
             const downloadLink = document.getElementById('download-link');
-            const thumbnail = galleryItems[currentIndex].querySelector('img');
 
-            fullscreenImage.src = thumbnail.getAttribute('data-full');
-            downloadLink.href = thumbnail.getAttribute('data-full');
+            fullscreenImage.src = galleryItems[currentIndex].querySelector('img').src;
+            downloadLink.href = galleryItems[currentIndex].querySelector('img').src;
         }
 
         document.addEventListener('keydown', function(event) {
