--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,13 @@
         .gallery-item img {
             width: 100%;
             height: auto;
+            display: block;
+        }
+
+        .gallery-item .thumbnail {
+            width: 100%;
+            height: 300px; /* Set a fixed height for thumbnails */
+            object-fit: cover; /* Ensures the image covers the container */
         }
 
         .gallery-item.show {
@@ -217,11 +224,11 @@
     </div>
 
     <div class="gallery">
-        <div class="gallery-item" data-tags="wildlife nature,amimal,portrait">
-            <img src="gimg/p1.png" alt="Photo 1" onclick="openFullscreen(this)">
+        <div class="gallery-item" data-tags="wildlife nature,animal,portrait">
+            <img src="gimg/thumbnail/p1.png" alt="Photo 1" class="thumbnail" data-full="gimg/p1.png" onclick="openFullscreen(this)">
         </div>
         <div class="gallery-item" data-tags="wildlife nature,animal,landscape">
-            <img src="gimg/p2.jpg" alt="Photo 2" onclick="openFullscreen(this)">
+            <img src="gimg/thumbnail/p2.png" alt="Photo 2" class="thumbnail" data-full="gimg/p2.jpg" onclick="openFullscreen(this)">
         </div>
         <!-- Add more photos with appropriate data-tags -->
     </div>
@@ -256,8 +263,8 @@
             const downloadLink = document.getElementById('download-link');
 
             fullscreen.style.display = 'flex';
-            fullscreenImage.src = element.src;
-            downloadLink.href = element.src;
+            fullscreenImage.src = element.getAttribute('data-full');
+            downloadLink.href = element.getAttribute('data-full');
             currentIndex = Array.from(galleryItems).indexOf(element.parentElement);
         }
 
@@ -278,9 +285,10 @@
         function updateFullscreenImage() {
             const fullscreenImage = document.getElementById('fullscreen-image');
             const downloadLink = document.getElementById('download-link');
+            const thumbnail = galleryItems[currentIndex].querySelector('img');
 
-            fullscreenImage.src = galleryItems[currentIndex].querySelector('img').src;
-            downloadLink.href = galleryItems[currentIndex].querySelector('img').src;
+            fullscreenImage.src = thumbnail.getAttribute('data-full');
+            downloadLink.href = thumbnail.getAttribute('data-full');
         }
 
         document.addEventListener('keydown', function(event) {
