--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            background-color: black;
         }
 
         /* Menu Bar */
