--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,8 @@
     /* About Section Styles */
     .about {
       padding: 50px 0;
-      background-color: #fff;
+      background-color: #000000;
+      color: #dad5d5;
     }
 
     .about-content {
@@ -207,7 +208,7 @@
     /* Gallery Section Styles */
     .gallery {
       padding: 50px 0;
-      background-color: #f9f9f9;
+      background-color: #302e2e;
     }
 
     .gallery-content {
@@ -219,6 +220,7 @@
     .gallery h2 {
       font-size: 2.5em;
       margin-bottom: 30px;
+      color: #dad5d5;
     }
 
     .gallery-images {
@@ -238,7 +240,8 @@
     /* Social Media Section Styles */
     .social-media {
       padding: 50px 0;
-      background-color: #fff;
+      background-color: #000000;
+      color: #dad5d5;
     }
 
     .social-media-content {
@@ -283,7 +286,8 @@
     /* Contact Section Styles */
     .contact {
       padding: 50px 0;
-      background-color: #f9f9f9;
+      background-color: #302e2e;
+      color: #dad5d5;
     }
 
     .contact-content {
@@ -307,15 +311,16 @@
       background-color: #333;
       color: #fff;
       text-align: center;
-      padding: 20px;
-      position: absolute;
+      padding: 10px;
+      position:absolute;
       bottom: 0;
       left: 0;
+      height: 50px;
       width: 100%;
     }
 
     .footer p {
-      margin: 0;
+      margin: 10px;
     }
 
     /* Animation */
