--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</form>
 				</div>
 				<p class="pfooter"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This we is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 				</div>
 			</aside> <!-- END COLORLIB-ASIDE -->
@@ -67,13 +67,13 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc">
 													<div class="top">
-														<span class="subheading">Portrait</span>
-														<h2 class="mb-4"><a href="gallery.html">Black &amp; Gold Paint Face</a></h2>
+														<span class="subheading">Welcome</span>
+														<h2 class="mb-4"><a href="gallery.html">Get  To know about Dineth</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Dineth Dilshan Gunawardana is a talented photographer and short film editor, known for his contributions to Istock and GettyImage. Born on March 20th, 2007 in Kaluthara, Sri Lanka, Dineth showed a passion for photography from an early age.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="single.html" class="custom-btn">View Profile</a></p>
 												</div>
 											</div>
 										</div>
