--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc text-md-right">
 													<div class="top">
-														<span class="subheading">Nature</span>
-														<h2 class="mb-4"><a href="gallery.html">Green Leaves</a></h2>
+														<span class="subheading">Wildlife</span>
+														<h2 class="mb-4"><a href="gallery.html">Walking Bear</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>The Sri Lankan sloth bear is highly threatened, with a population less than 1000 (the wild population may be as few as 500) in many isolated populations with population decrease. Destruction of dry-zone natural forest is its main threat because unlike other large Sri Lankan animals, the Sri Lankan sloth bear is highly dependent on natural forests for its food source. An increase in sloth bear-human interaction has also caused many conflicts.These conflicts include death and injury to humans, livestock loss, damage to property, and retaliatory killing of wildlife causing humans to fear this species.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
@@ -119,13 +119,14 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc">
 													<div class="top">
-														<span class="subheading">Nature</span>
-														<h2 class="mb-4"><a href="gallery.html">Coal</a></h2>
+														<span class="subheading">Wildlife</span>
+														<h2 class="mb-4"><a href="gallery.html">Sri Lankan Boar</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Sri Lankan wild boars are distinguished by their powerful physique and unique characteristics. These creatures differ from their domestic counterparts in some physical ways. Male wild boar are usually bigger than female ones, and adult wild boar in Sri Lanka weigh between 80 and 150 kg on average. they are a swift and formidable breed in the wild, due to their robust bone structure and muscular strength. Their coarse wool coating is dark brown to black, and beneath the skin is a thick layer of fat. They can adapt to the many temperatures on the island thanks to this arrangement, which also protects them in harsh and unforgiving conditions.
+														</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
