--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 							<div class="col-md-12 portfolio-wrap">
 								<div class="row no-gutters align-items-center">
-									<a href="images/work-4.jpg" class="col-md-6 order-md-last img image-popup js-fullheight d-flex align-items-center justify-content-center" style="background-image: url(images/work-4.jpg);">
+									<a href="images/me.png" class="col-md-6 order-md-last img image-popup js-fullheight d-flex align-items-center justify-content-center" style="background-image: url(images/work-4.jpg);">
 										<div class="icon d-flex align-items-center justify-content-center">
 											<span class="fa fa-expand"></span>
 										</div>
@@ -146,13 +146,13 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc text-md-right">
 													<div class="top">
-														<span class="subheading">Nature</span>
-														<h2 class="mb-4"><a href="gallery.html">Top Leaf</a></h2>
+														<span class="subheading">Landscape</span>
+														<h2 class="mb-4"><a href="gallery.html">Some lake in Wilpattuwa</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Natural beauty of mother nature some lake in Wilpattuwa National park with sunricing moment </p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
