--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 												<div class="desc text-md-right">
 													<div class="top">
 														<span class="subheading">Landscape</span>
-														<h2 class="mb-4"><a href="gallery.html">Some lake in Wilpattuwa</a></h2>
+														<h2 class="mb-4"><a href="gallery.html">Some lake in Minneriya</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Natural beauty of mother nature some lake in Wilpattuwa National park with sunricing moment </p>
+														<p>Natural beauty of mother nature some lake in Minneriya National park with sunricing moment </p>
 													</div>
 													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
@@ -172,13 +172,15 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc">
 													<div class="top">
-														<span class="subheading">Portrait</span>
-														<h2 class="mb-4"><a href="gallery.html">Building</a></h2>
+														<span class="subheading">Old Ruins</span>
+														<h2 class="mb-4"><a href="gallery.html">Lanka Thilaka temple</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Polonnaruwa Lankathilaka Image House is a monolithic Buddha image house built by King Parakramabahu (1153-1186) lying on the South of Kiri Vehera. The building is completely made out of bricks and the outer walls are covered with elaborate designs and carvings. The Buddha statue is also completely made out of clay bricks and it has been 41 feet in height. Specially made flat bricks have been used to build this statue and today the portion above the shoulder is destroyed.
+
+															At the entrance to the Lankathilaka building is two massive pillars made from bricks. The tallest one is 58 feet in height. It is thought that these pillars would have been at least twice as tall this before destruction. According to the chronicles, this building has five stories. This too is a part of the Alahana Privena.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
@@ -292,7 +294,7 @@
 						</div>
 						<div class="row d-flex">
 							<div class="col-md-12">
-								<a href="#" class="btn-custom-load d-block w-100 text-center py-4">Load more <span class="fa fa-refresh"></span></a>
+								<a href="https://www.instagram.com/thisisdineth/" class="btn-custom-load d-block w-100 text-center py-4">Load more <span class="fa fa-refresh"></span></a>
 							</div>
 						</div>
 					</div>
