--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc text-md-right">
 													<div class="top">
-														<span class="subheading">Fashion</span>
-														<h2 class="mb-4"><a href="gallery.html">Black Girl Model</a></h2>
+														<span class="subheading">Animal</span>
+														<h2 class="mb-4"><a href="gallery.html">A hipo under a tree</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>I took this photo in Ridiyagama Safari Park Sri Lanka a Hipo under a tree</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
@@ -226,7 +226,7 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc">
 													<div class="top">
-														<span class="subheading">Animals</span>
+														<span class="subheading">People</span>
 														<h2 class="mb-4"><a href="gallery.html">Pug Puppy</a></h2>
 													</div>
 													<div class="absolute">
