--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</form>
 				</div>
 				<p class="pfooter"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This we is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This we is made with <i class="fa fa-heart" aria-hidden="false"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 				</div>
 			</aside> <!-- END COLORLIB-ASIDE -->
