All done for home page

--- a/index.html
+++ b/index.html
@@ -38,18 +38,13 @@
 
 			<div class="colorlib-footer">
 				<div class="mb-4">
-					<h3>Subscribe for newsletter</h3>
-					<form action="#" class="colorlib-subscribe-form">
-						<div class="form-group d-flex">
-							<div class="icon"><span class="icon-paper-plane"></span></div>
-							<input type="text" class="form-control" placeholder="Enter Email Address">
-						</div>
+					<h3>Visit My instagram</h3>
+					<form action="https://www.instagram.com/thisisdineth/" class="colorlib-subscribe-form">
+						<a href="https://www.instagram.com/thisisdineth/"><img src="images/glitch-insta.gif" width="100" height="60"></a>
+						
 					</form>
 				</div>
-				<p class="pfooter"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This we is made with <i class="fa fa-heart" aria-hidden="false"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-				</div>
+				
 			</aside> <!-- END COLORLIB-ASIDE -->
 			<div id="colorlib-main">
 				<section class="ftco-section ftco-no-pt ftco-no-pb">
@@ -227,12 +222,12 @@
 												<div class="desc">
 													<div class="top">
 														<span class="subheading">People</span>
-														<h2 class="mb-4"><a href="gallery.html">Pug Puppy</a></h2>
+														<h2 class="mb-4"><a href="gallery.html">Sri Lankan Old woman smiling</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Sri Lankan old woman smiling for a photo BLACK and WHITE The Face ! and imotions we can clearly see on this image</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
@@ -252,13 +247,19 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc text-md-right">
 													<div class="top">
-														<span class="subheading">Nature</span>
-														<h2 class="mb-4"><a href="gallery.html">White Flower</a></h2>
+														<span class="subheading">Birds</span>
+														<h2 class="mb-4"><a href="gallery.html">Sri Lankan Eagle</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>
+															Crested Serpent Eagle
+															(සිලු සරපකුස්සා)
+															Spilornis cheela
+															This majestic predator was first spotted at 'Anawilundawa' on a day when I was initially disappointed as there were hardly any birds around to see. This one made my day when he gave me the opportunity to take as many photos as I want.
+															​
+															Images 5 and 6 were taken on the road from Mannar to Jaffna. Images 7 and 8 on the outskirts of Sigiriya forest reserve. the backdrop of 'Pidurangala' provided a different background to the images. Images 9 and 10 Bundala National Park. Images 11 to 13 are from Wilpattu National Park.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
@@ -278,13 +279,13 @@
 											<div class="px-4 px-lg-4">
 												<div class="desc">
 													<div class="top">
-														<span class="subheading">Animals</span>
-														<h2 class="mb-4"><a href="gallery.html">Turtle</a></h2>
+														<span class="subheading">Landscape</span>
+														<h2 class="mb-4"><a href="gallery.html">A lake in Wilpattuwa Sri lanka</a></h2>
 													</div>
 													<div class="absolute">
-														<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
+														<p>Wilpattu National Park is a national park in Sri Lanka. The unique feature of this park is the existence of "Willus" – natural, sand-rimmed water basins or depressions that fill with rainwater.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Portfolio</a></p>
+													<p><a href="gallery.html" class="custom-btn">View Gallery</a></p>
 												</div>
 											</div>
 										</div>
