--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
 
-			<h1 id="colorlib-logo" class="mb-4 mb-md-5"><a href="index.html" style="background-image: url(images/bg_1.jpg);">Dineth Dilshan</a></h1>
+			<h1 id="colorlib-logo" class="mb-4 mb-md-5"><a href="index.html" style="background-image: url(images/work-5.jpg);">Dineth Dilshan</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="pricing.html">Pricing</a></li>
+					<li><a href="pricing.html">Gifts </a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
