--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Mostudio - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Gifts | Dineth Gunawardana</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -25,30 +25,24 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
 
-			<h1 id="colorlib-logo" class="mb-4 mb-md-5"><a href="index.html" style="background-image: url(images/bg_1.jpg);">Mostudio</a></h1>
+			<h1 id="colorlib-logo" class="mb-4 mb-md-5"><a href="index.html" style="background-image: url(images/work-4.jpg);">Dineth Dilshan</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="colorlib-active"><a href="pricing.html">Pricing</a></li>
+					<li class="colorlib-active"><a href="pricing.html">Gifts</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
 			<div class="colorlib-footer">
 				<div class="mb-4">
-					<h3>Subscribe for newsletter</h3>
-					<form action="#" class="colorlib-subscribe-form">
-						<div class="form-group d-flex">
-							<div class="icon"><span class="icon-paper-plane"></span></div>
-							<input type="text" class="form-control" placeholder="Enter Email Address">
-						</div>
+					<h3>Buy Me a Coffe</h3>
+					<form action="https://www.instagram.com/thisisdineth/" class="colorlib-subscribe-form">
+						<a href="https://www.instagram.com/thisisdineth/"><img src="images/bmc-button.png" width="200" height="60"></a>
+						
 					</form>
-				</div>
-				<p class="pfooter"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 				</div>
 			</aside> <!-- END COLORLIB-ASIDE -->
 			<div id="colorlib-main">
