--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 													<div class="absolute">
 														<p>Dineth Dilshan Gunawardana is a talented photographer and short film editor, known for his contributions to Istock and GettyImage. Born on March 20th, 2007 in Kaluthara, Sri Lanka, Dineth showed a passion for photography from an early age.</p>
 													</div>
-													<p><a href="single.html" class="custom-btn">View Profile</a></p>
+													<p><a href="about.html" class="custom-btn">View Profile</a></p>
 												</div>
 											</div>
 										</div>
