--- a/pricing.html
+++ b/pricing.html
@@ -40,7 +40,7 @@
 				<div class="mb-4">
 					<h3>Buy Me a Coffe</h3>
 					<form action="https://www.instagram.com/thisisdineth/" class="colorlib-subscribe-form">
-						<a href=""><img src="images/bmc-button.png" width="200" height="60"></a>
+						<a href="https://buymeacoffee.com/dinethdilshan"><img src="images/bmc-button.png" width="200" height="60"></a>
 						
 					</form>
 				</div>
