--- a/pricing.html
+++ b/pricing.html
@@ -51,72 +51,72 @@
 						<div class="row d-flex no-gutters">
 							<div class="col-md-3 pricing">
 								<div class="row no-gutters align-items-center">
-									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(images/work-1.jpg);">
+									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(gallery/backgr.jpeg);">
 										<div class="text p-4 ftco-animate">
-											<h3>Model Photography</h3>
+											<h3>Swan In The Lake</h3>
 											<ul>
-												<li><span>Photos</span>Package of 50</li>
-												<li><span>Processing</span>Retouch</li>
-												<li><span>Type of Camera</span>Semi Professional</li>
-												<li><span>Resolution</span>12 MP</li>
-												<li><span>Term</span>14 Days</li>
+												<li><span>Printed</span><img src="gallery/frame1.png" width="220" height="170"></li>
+												<li><span>Text in Photo</span>Powerful Day Bigins With powerful Mind</li>
+												<li><span>Size</span>16 x 24 inch </li>
+												<li><span>Resolution</span>High</li>
+												<li><span>Deliver</span>14 Days</li>
 											</ul>
-											<span class="price">$50</span>
-											<p><a href="#" class="btn-custom">Explore</a></p>
+											<span class="price">රු.3500</span>
+											<p><a href="" class="btn-custom">See and Buy</a></p>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3 pricing">
 								<div class="row no-gutters align-items-center">
-									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(images/work-2.jpg);">
+									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(gallery/backgr.jpeg);">
 										<div class="text p-4 ftco-animate">
-											<h3>Events Photography</h3>
+											<h3>Swan In The Lake</h3>
 											<ul>
-												<li><span>Photos</span>Package of 50</li>
-												<li><span>Processing</span>Retouch</li>
-												<li><span>Type of Camera</span>Semi Professional</li>
-												<li><span>Resolution</span>12 MP</li>
-												<li><span>Term</span>14 Days</li>
+												<li><span>Printed</span><img src="gallery/frame2.png" width="120" height="150"></li>
+												<li><span>About</span>Powerful Day Bigins With powerful Mind</li>
+												<li><span>Size</span>custom Size </li>
+												<li><span>Resolution</span>High</li>
+												<li><span>Deliver</span>14 Days</li>
 											</ul>
-											<span class="price">$50</span>
-											<p><a href="#" class="btn-custom">Explore</a></p>
+											<span class="price">රු.</span>
+											<p><a href="" class="btn-custom">Buy Now</a></p>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3 pricing">
 								<div class="row no-gutters align-items-center">
-									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(images/work-3.jpg);">
+									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(gallery/backgr.jpeg);">
 										<div class="text p-4 ftco-animate">
-											<h3>Corporate Photography</h3>
+											<h3>Swan In The Lake</h3>
 											<ul>
-												<li><span>Photos</span>Package of 50</li>
-												<li><span>Processing</span>Retouch</li>
-												<li><span>Type of Camera</span>Semi Professional</li>
-												<li><span>Resolution</span>12 MP</li>
-												<li><span>Term</span>14 Days</li>
+												<li><span>Printed</span><img src="gallery/frame3.png" width="120" height="150"></li>
+												<li><span>Text in Photo</span>Powerful Day Bigins With powerful Mind</li>
+												<li><span>Size</span>16 x 24 inch </li>
+												<li><span>Resolution</span>High</li>
+												<li><span>Deliver</span>14 Days</li>
 											</ul>
-											<span class="price">$50</span>
-											<p><a href="#" class="btn-custom">Explore</a></p>
+											<span class="price">රු.</span>
+											<p><a href="" class="btn-custom">Buy Now</a></p>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3 pricing">
 								<div class="row no-gutters align-items-center">
-									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(images/work-4.jpg);">
+									<div href="#" class="img w-100 js-fullheight d-flex align-items-center" style="background-image: url(gallery/backgr.jpeg);">
 										<div class="text p-4 ftco-animate">
-											<h3>Movies Photography</h3>
+											<h3>Swan In The Lake</h3>
 											<ul>
-												<li><span>Photos</span>Package of 50</li>
-												<li><span>Processing</span>Retouch</li>
-												<li><span>Type of Camera</span>Semi Professional</li>
-												<li><span>Resolution</span>12 MP</li>
-												<li><span>Term</span>14 Days</li>
+												<li><span>Printed</span><img src="gallery/frame4.png" width="200" height="150"></li>
+												<li><span>Text in Photo</span>Powerful Day Bigins With powerful Mind</li>
+												<li><span>Size</span>16 x 24 inch </li>
+												<li><span>Resolution</span>High</li>
+												<li><span>Deliver</span>14 Days</li>
 											</ul>
-											<span class="price">$50</span>
-											<p><a href="#" class="btn-custom">Explore</a></p>
+											<span class="price">රු.3500</span>
+											<p><a href="" class="btn-custom">Buy Now</a></p>
 										</div>
 									</div>
 								</div>
